[package]
authors = ["Determinant <ted.sybil@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "lcd1602"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f1]
version = "0.8.0"
features = ["stm32f103", "rt"]

[lib]
name ="lcd1602"
path = "src/lib.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
